...
        }}
      />
      <Tabs.Screen
        name="map"
        options={{
          title: "Map",
          tabBarButton: (props) => <Pressable {...props} testID="map-tab" />,
          tabBarIcon: ({ color, size }) => (
            <Ionicons name="map-outline" size={size} color={color} />
          ),
        }}
      />
      <Tabs.Screen
...
        }}
      />
      <Tabs.Screen
        name="profile"
        options={{
          title: "Profile",
          tabBarButton: (props) => <Pressable {...props} testID="profile-tab" />,
          tabBarIcon: ({ color, size }) => (
            <Ionicons name="person-outline" size={size} color={color} />
          ),
        }}
      />
    </Tabs>
...
